--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/mystyle.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css"
+    />
     <script src="js/bootstrap.js"></script>
   </head>
   <body>
@@ -51,6 +56,92 @@
             <button class="btn btn-primary btn-lg">Read more</button>
           </div>
           <img class="img-fluid w-50 p-1" src="images/banner2.svg" alt="" />
+        </div>
+      </div>
+    </section>
+    <!-- news letter -->
+    <section class="bg-primary text-light p-5">
+      <div class="container">
+        <div class="d-md-flex justify-content-between align-items-center">
+          <h3 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h3>
+          <div class="input-group news-input">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Enter email"
+              aria-label="enter email"
+              aria-describedby="button-addon2"
+            />
+            <button class="btn btn-dark" type="button" id="button-addon2">Button</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- boxes -->
+    <section class="p-5">
+      <div class="container">
+        <div class="row text-center g-4">
+          <div class="col-md">
+            <div class="card bg-dark text-light">
+              <div class="card-body text-center">
+                <div class="h1 mb-3">
+                  <i class="bi bi-laptop"></i>
+                </div>
+                <h3 class="card-title">Virtual</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, assumenda!
+                </p>
+                <a href="#" class="btn btn-primary"> Read more</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md">
+            <div class="card bg-dark text-light">
+              <div class="card-body text-center">
+                <div class="h1 mb-3">
+                  <i class="bi bi-laptop"></i>
+                </div>
+                <h3 class="card-title">Virtual</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, assumenda!
+                </p>
+                <a href="#" class="btn btn-primary"> Read more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card bg-dark text-light">
+              <div class="card-body text-center">
+                <div class="h1 mb-3">
+                  <i class="bi bi-laptop"></i>
+                </div>
+                <h3 class="card-title">Virtual</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, assumenda!
+                </p>
+                <a href="#" class="btn btn-primary"> Read more</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Learn section -->
+    <section class="">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md-6">
+            <img class="img-fluid" src="images/banner4.svg" alt="Network error" />
+          </div>
+          <div class="col-md-6">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores, neque consectetur
+            ullam nihil inventore esse reiciendis incidunt impedit eius commodi voluptatibus
+            accusantium doloribus beatae iste? Est magni laborum, expedita repellat eos omnis animi
+            dolor quam nulla corporis illo? Consequatur a cumque dolorem, repellat cum voluptates
+            officia possimus sunt magni voluptate.
+          </div>
         </div>
       </div>
     </section>
