--- a/index.html
+++ b/index.html
@@ -145,5 +145,113 @@
         </div>
       </div>
     </section>
+
+    <!-- Our Teammates -->
+    <section class="p-5 bg-primary">
+      <div class="container">
+        <h2 class="text-center text-white">Our Teammates</h2>
+        <p class="lead text-center text-white mb-5">
+          Our Teammates all have 3+ years working as a Web developer in the industry
+        </p>
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-4">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle" />
+                <h3 class="card-title mb-3">Bhat Haamid</h3>
+                <p class="card-text">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium, nesciunt?
+                </p>
+                <a href="#">
+                  <i class="bi bi-twitter text-dark mx-1"></i>
+                </a>
+                <a href="https://www.facebook.com/haamid.bhat3">
+                  <i class="bi bi-facebook text-dark mx-1"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/haamidbhat">
+                  <i class="bi bi-linkedin text-dark mx-1"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle" />
+                <h3 class="card-title mb-3">Adnan Ayoub</h3>
+                <p class="card-text">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium, nesciunt?
+                </p>
+                <a href="http://twitter.com/adnanganie">
+                  <i class="bi bi-twitter text-dark mx-1"></i>
+                </a>
+                <a href="#">
+                  <i class="bi bi-facebook text-dark mx-1"></i>
+                </a>
+                <a href="#">
+                  <i class="bi bi-linkedin text-dark mx-1"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle" />
+                <h3 class="card-title mb-3">Khalid Aziz</h3>
+                <p class="card-text">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium, nesciunt?
+                </p>
+                <a href="#">
+                  <i class="bi bi-twitter text-dark mx-1"></i>
+                </a>
+                <a href="#">
+                  <i class="bi bi-facebook text-dark mx-1"></i>
+                </a>
+                <a href="#">
+                  <i class="bi bi-linkedin text-dark mx-1"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact & map-->
+    <section class="p-5">
+      <div class="container">
+        <div class="row g-4">
+          <h3>Contact Us</h3>
+          <div class="col-md-6">
+            <ul class="list-group list-group-flush lead">
+              <li class="list-group-item">
+                <span class="fw-bold">Main Location:</span> Shopian jammu & kashmir
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Email:</span> bhatthaamid@gmail.com
+              </li>
+              <li class="list-group-item"><span class="fw-bold">Contact no:</span>123456789</li>
+            </ul>
+          </div>
+
+          <div class="col-md-6">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3319.068392619999!2d74.86340601468967!3d33.70717914328356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38e1fb174ba89b1f%3A0x60e7516bd3f570bb!2sBhat%20Kiryan%20Store!5e0!3m2!1sen!2sin!4v1644141679187!5m2!1sen!2sin"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer section here -->
+    <footer class="py-3 my-4 justify-content-center border-bottom">
+      <p class="text-center text-muted">© 2022 BhatHaamid&co</p>
+    </footer>
   </body>
 </html>
