--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link">Contact Us</a>
+              <a href="#contactus" class="nav-link">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -162,13 +162,13 @@
                 <p class="card-text">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium, nesciunt?
                 </p>
-                <a href="#">
+                <a href="https://www.twitter.com//BhatHAAMID1" target="_blank">
                   <i class="bi bi-twitter text-dark mx-1"></i>
                 </a>
-                <a href="https://www.facebook.com/haamid.bhat3">
+                <a href="https://www.facebook.com/haamid.bhat3" target="_blank">
                   <i class="bi bi-facebook text-dark mx-1"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/haamidbhat">
+                <a href="https://www.linkedin.com/in/haamidbhat" target="_blank">
                   <i class="bi bi-linkedin text-dark mx-1"></i>
                 </a>
               </div>
@@ -182,13 +182,13 @@
                 <p class="card-text">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium, nesciunt?
                 </p>
-                <a href="http://twitter.com/adnanganie">
+                <a href="http://twitter.com/adnanganie" target="_blank">
                   <i class="bi bi-twitter text-dark mx-1"></i>
                 </a>
-                <a href="#">
+                <a href="https://facebook.com/adnanganie" target="_blank">
                   <i class="bi bi-facebook text-dark mx-1"></i>
                 </a>
-                <a href="#">
+                <a href="https://linkedin.com//in/adnanayoub" target="_blank">
                   <i class="bi bi-linkedin text-dark mx-1"></i>
                 </a>
               </div>
@@ -202,13 +202,13 @@
                 <p class="card-text">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium, nesciunt?
                 </p>
-                <a href="#">
+                <a href="https://twitter.com//khalidaziz" target="_blank">
                   <i class="bi bi-twitter text-dark mx-1"></i>
                 </a>
-                <a href="#">
+                <a href="https://facebook.com//sopheekhalid" target="_blank">
                   <i class="bi bi-facebook text-dark mx-1"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.linkedin.com/in/dr-khalid-aziz-722090114" target="_blank">
                   <i class="bi bi-linkedin text-dark mx-1"></i>
                 </a>
               </div>
@@ -219,7 +219,7 @@
     </section>
 
     <!-- Contact & map-->
-    <section class="p-5">
+    <section class="p-5" id="contactus">
       <div class="container">
         <div class="row g-4">
           <h3>Contact Us</h3>
@@ -237,7 +237,7 @@
 
           <div class="col-md-6">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3319.068392619999!2d74.86340601468967!3d33.70717914328356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38e1fb174ba89b1f%3A0x60e7516bd3f570bb!2sBhat%20Kiryan%20Store!5e0!3m2!1sen!2sin!4v1644141679187!5m2!1sen!2sin"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211426.55884616546!2d74.66666822158263!3d34.106923280208996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38e1855686e3c5ef%3A0x66244b7cc1e305c6!2sSrinagar!5e0!3m2!1sen!2sin!4v1644143573256!5m2!1sen!2sin"
               width="600"
               height="450"
               style="border: 0"
