onBlur change event

--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Signup <Form></Form></title>
     <link rel="stylesheet" href="css/bootstrap.css" />
-    
   </head>
   <body>
     <div class="container p-5">
@@ -21,7 +20,7 @@
                     type="fname"
                     class="form-control"
                     id="fName"
-                  onblur="firstNameOnBlur()"
+                    onfocus="signUpFormOnBlurAction('fName')"
                     name="fname"
                     aria-describedby="fnamehelp"
                     autocomplete="off"
@@ -39,6 +38,7 @@
                     name="lastName"
                     class="form-control"
                     id="lastName"
+                    onblur="signUpFormOnBlurAction('lastName')"
                     autocomplete="off"
                   />
                   <div id="lastNameError" class="invalid-feedback">Please enter second name.</div>
@@ -50,18 +50,25 @@
                     name="email"
                     class="form-control"
                     id="email"
+                    onblur="signUpFormOnBlurAction('email')"
                     autocomplete="off"
                   />
-                  <div id="emailError"
-                   class="invalid-feedback">
+                  <div id="emailError" class="invalid-feedback">
                     Please enter valid email or phone number first.
                   </div>
                 </div>
                 <div class="mb-3">
                   <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="password" autocomplete="off" />
-                  <div id="passwordError"
-                  class="invalid-feedback">Please enter valid password.</div>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="password"
+                    autocomplete="off"
+                    onblur="signUpFormOnBlurAction('password')"
+                  />
+                  <div id="passwordError" class="invalid-feedback">
+                    Please enter valid password.
+                  </div>
                 </div>
                 <div class="mb-3">
                   <label for="Confirm Password" class="form-label"> Confirm Password</label>
@@ -69,10 +76,12 @@
                     type="password"
                     class="form-control"
                     id="confirmPassword"
+                    onblur="signUpFormOnBlurAction('confirmPassword')"
                     autocomplete="off"
                   />
-                  <div id="confirmPasswordError"
-                   class="invalid-feedback">Password does not match!</div>
+                  <div id="confirmPasswordError" class="invalid-feedback">
+                    Password does not match!
+                  </div>
                 </div>
 
                 <!-- <div class="mb-3 form-check">
